--- a/package.json
+++ b/package.json
@@ -1,25 +1,53 @@
 {
-  "name": "labor-face",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+    "name": "labor-face",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "antd": "^3.10.9",
+        "axios": "^0.18.0",
+        "babel-plugin-import": "^1.11.0",
+        "connected-react-router": "^5.0.1",
+        "history": "^4.7.2",
+        "react": "^16.6.3",
+        "react-app-rewired": "^1.6.2",
+        "react-dom": "^16.6.3",
+        "react-redux": "^5.1.1",
+        "react-router": "^4.3.1",
+        "react-router-dom": "^4.3.1",
+        "react-scripts": "2.1.1",
+        "reduce-reducers": "^0.4.3",
+        "redux": "^4.0.1",
+        "redux-actions": "^2.6.4",
+        "redux-logger": "^3.0.6",
+        "redux-thunk": "^2.3.0"
+    },
+    "scripts": {
+        "start": "react-app-rewired start",
+        "build": "react-app-rewired build",
+        "test": "react-app-rewired test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "prettier": {
+        "singleQuote": true,
+        "trailingComma": "all"
+    },
+    "browserslist": [
+        ">0.2%",
+        "not dead",
+        "not ie <= 11",
+        "not op_mini all"
+    ],
+    "devDependencies": {
+        "babel-eslint": "^10.0.1",
+        "eslint-config-airbnb": "^17.1.0",
+        "eslint-config-prettier": "^3.3.0",
+        "eslint-plugin-import": "^2.14.0",
+        "eslint-plugin-jsx-a11y": "^6.1.2",
+        "eslint-plugin-prettier": "^3.0.0",
+        "eslint-plugin-react": "^7.11.1",
+        "prettier": "^1.15.3"
+    }
 }
