--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "ant-design-pro": "^2.1.1",
         "antd": "^3.10.9",
         "axios": "^0.18.0",
         "babel-plugin-import": "^1.11.0",
