--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
         "redux": "^4.0.1",
         "redux-actions": "^2.6.4",
         "redux-logger": "^3.0.6",
-        "redux-thunk": "^2.3.0"
+        "redux-thunk": "^2.3.0",
+        "semver": "^5.6.0"
     },
     "scripts": {
         "start": "react-app-rewired start",
