--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "babel-plugin-import": "^1.11.0",
         "connected-react-router": "^5.0.1",
         "history": "^4.7.2",
+        "query-string": "^6.2.0",
         "react": "^16.6.3",
         "react-app-rewired": "^1.6.2",
         "react-dom": "^16.6.3",
